[package]
name = "arq_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
tokio = "1.20.1"

tracing = "0.1.36"
tracing-subscriber = "0.3.15"

sea-orm = { version = "0.6.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }

arq_components = { version = "0.1.0", path = "../arq_components" }
arq_entities = { version = "0.1.0", path = "../arq_entities" }
# migration = { version = "0.1.0", path = "../migration" }